# severstal-intern

./: .env  Dockerfile  README.md  crud.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  settings.py
alembic/: env.py
alembic/versions/: 73bb78b4d15f_create_rolls_table.py
